kubernetes/media/qbittorrent/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: pve2
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: qbittorrent
        image: ghcr.io/home-operations/qbittorrent:5.1.3
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent
      - name: media
        persistentVolumeClaim:
          claimName: media
