kubernetes/media/qbittorrent/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: qbittorrent
spec:
  serviceName: qbittorrent
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: pve2
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: qbittorrent
        image: ghcr.io/home-operations/qbittorrent:5.1.3
        livenessProbe:
          httpGet:
            path: /api/v2/app/version
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: proxmox
      resources:
        requests:
          storage: 1Gi
