kubernetes/media/qbittorrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
spec:
  parentRefs:
  - name: cilium
    namespace: cilium
  hostnames:
  - qbit.cecobask.com
  rules:
  - backendRefs:
    - name: qbittorrent
      port: 8080
